crates/crane/src/snapshots/crane__compiler__tests__camel_case_function_name.snap
---
source: crates/crane/src/compiler.rs
expression: "&stderr"
---
Error: A type error occurred.
   ╭─[camel_case.crane:1:2]
   │
 3 │ fn inCamelCase() {}
   │    ─────┬─────  
   │         ╰─────── Function names must be written in snake_case.
   │         │       
   │         ╰─────── Try writing it as `in_camel_case` instead.
───╯

